# angular-shopping-web

./: AGENTS.md  README.md  angular.json  package-lock.json  package.json
.github/workflows/: build.yml
cpp-backend/: .gitignore  CMakeLists.txt  README.md
cpp-backend/src/: data.hpp  main.cpp  models.hpp
goodbye-page/: index.html  script.js  style.css
src/: index.html
src/app/: app.css  app.html  app.routes.ts  app.spec.ts  app.ts
src/app/components/cart/: cart.component.css  cart.component.html  cart.component.ts
src/app/components/product-card/: product-card.component.css  product-card.component.html  product-card.component.ts
src/app/components/product-list/: product-list.component.css  product-list.component.html  product-list.component.ts
src/app/components/stock-kline/: stock-kline.component.css  stock-kline.component.html  stock-kline.component.ts
src/app/models/: coupon.ts  ohlc.ts  product.ts
src/app/services/: cart.service.ts  coupon.service.ts  stock-chart.service.spec.ts  stock-chart.service.ts
